--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
   <meta name="theme-color" content="#000000" />
 
 
-  <link rel="icon" href="/Images/favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="/Images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>My Portfolio</title>
 
 
