--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,8 @@
   <meta name="theme-color" content="#000000" />
 
 
-  <link rel="icon" href="npm dfavicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <title>My Portfolio</title>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <title>Krzysztof Purgat</title>
 
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
